[package]
name = "cosmos-withdrawer"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.31", features = ["derive", "env"] }
cosmos-sdk-proto = { version = "0.26.1", features = ["grpc", "grpc-transport", "serde"] }
cosmrs = { version = "0.21.1", features = ["grpc", "rpc", "tokio"] }
eyre = "0.6.12"
tokio = { version = "1.43.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tonic = "*"
tower = "*"
paste = "1.0.15"
subtle-encoding = { version = "0.5.1", default-features = false, features = ["alloc", "bech32-preview"] }
bech32 = "0.11.0"
serde_json = "1.0.140"
serde = { version = "1.0.219", features = ["derive"] }
base64 = "0.22.1"
zeroize = { version = "1.8.1", features = ["aarch64", "simd", "std"] }
prost = { version = "0.13.5", features = ["prost-derive"] }
num-bigint = "0.4.6"
time = "0.3.41"
