[package]
name = "cosmos-withdrawer"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.38", features = ["derive", "env"] }
cosmrs = { version = "0.22.0", features = ["grpc", "rpc", "tokio"] }
eyre = "0.6.12"
tokio = { version = "1.45.0", features = ["macros", "net", "rt-multi-thread"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
paste = "1.0.15"
bech32 = "0.11.0"
serde_json = "1.0.140"
serde = { version = "1.0.219", features = ["derive"] }
prost = { version = "0.13.5", features = ["prost-derive"] }
num-bigint = "0.4.6"
time = "0.3.41"
bip32 = { version = "0.5.3", features = ["mnemonic", "bip39"] }
